# DesktopTools

./: .buildinfo  .gitignore  LICENSE  Makefile  README.md  args.py  genindex.html  guide.html  halahayawa.py  index.html  installer.sh  logger.py  main.py  monitor.py  objects.inv  plan.md  pyproject.toml  requirements.txt  search.html  searchindex.js  server.html  test.py  tools.py
.github/workflows/: ci.yml  publish.yml
DesktopTools/: args.py  logger.py  main.py  tools.py  windows_main.py
DesktopTools/app/: msg_systray.py
DesktopTools/feather_hotkey/: clip_string.py  custom_list_widget.py  models.py  searchbar.ui  searchbar_ui.py  thread.py  ui_searchbar.py  win_searchbar.py
DesktopTools/feather_timer/: halahayawa.py  input_counter.py  monitor.py
DesktopTools/feather_timer/data_alchemy/: inputs.py  models.py  worktimes.py
_static/: alabaster.css
app/: input_counter.py  msg_systray.py
data_alchemy/: inputs.py  models.py  worktimes.py
docs/: Makefile
docs/source/: conf.py  guide.md  index.md  server.md
feather_hotkey/: clip_string.py  searchbar.ui  thread.py  ui_searchbar.py  win_searchbar.py
feather_timer/: halahayawa.py  input_counter.py  monitor.py
feather_timer/data_alchemy/: inputs.py  models.py  worktimes.py
scripts/: check.py  lint.py
tests/: test_core.py  utils.py
