[tool.poetry]
name = "DesktopTools"
version = "0.0.1"
description = "Python Http File Server: Added file upload function to `http.server`"
authors = ["ianvzs <ianvzs@outlook.com>", "saint <ysudqfs@163.com>"]
readme = "README.md"
repository = "https://github.com/IanVzs/Halahayawa"
license = "MIT"
packages = [
    { include = "DesktopTools" },
    { include = "DesktopTools/app" },
    { include = "DesktopTools/feather_hotkey" },
    { include = "DesktopTools/feather_timer" },
]

[tool.poetry.scripts]
DesktopTools = "DesktopTools:main"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
PySide6 = { version = "^6.0.0", optional = true }
pynput = "^1.7.6"
loguru = "^0.6.0"
SQLAlchemy = "^2.0.0"
yapf = "^0.32.0"
wheel = "^0.40.0"


[tool.poetry.extras]
ui = ["PySide6"]


[tool.poetry.dev-dependencies]
flake8 = "*"
isort = "*"
black = {version = "*", allow-prereleases = true}
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
Sphinx = "^4.1.2"
myst-parser = "^0.15.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
